# youtube-local-transcribe-skill-public

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  install.ps1  install.sh  pyproject.toml
.github/workflows/: tests.yml
codex-skill/: SKILL.md
codex-skill/agents/: openai.yaml
codex-skill/references/: model-selection.md  notion.md  obsidian.md  reporting.md  setup.md
codex-skill/scripts/: process_video.py  serve_dashboard.py
docs/: bilibili-to-notes.md  comparison.md  examples.md  faq.md  index.html  local-whisper-video-transcription.md  quickstart.md  robots.txt  sitemap.xml  youtube-to-notion.md
evals/: evals.json
local-report-archive/: README.md
local-report-archive/root-workspace/: dashboard.html  index.json
local-report-archive/root-workspace/processed/2026-07-04_youtube_aZcYS8DZ4YI_10万美元投资挑战-ai基建跌出黄金坑-准备开仓一只股票/: captions.zh.json3  metadata.json  report.html  summary.md  transcript.txt  video.info.json
local-report-archive/youtube-reports-workspace/: dashboard.html  index.json
local-report-archive/youtube-reports-workspace/processed/2026-07-03_bilibili_BV12kTp6tENs_anthropic估值暴涨背后-普通人有什么ai时代的红利/: metadata.json  report.html  summary.txt  transcript.json  transcript.txt  video.info.json
tests/: test_captions.py  test_notion.py  test_obsidian.py  test_reporting.py  test_runtime.py  test_setup.py  test_skill_metadata.py
ytlt/: __init__.py  captions.py  cli.py  config.py  ffmpeg.py  notion.py  obsidian.py  reporting.py  runtime.py  spec.py  transcribe.py
