[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "video-to-notes"
version = "0.1.0"
description = "Turn video links into transcripts, summaries, reports, and local/Notion/Obsidian notes."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
keywords = ["video", "transcription", "summarization", "notion", "obsidian", "whisper"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Multimedia :: Video",
  "Topic :: Text Processing",
]
dependencies = [
  "yt-dlp>=2025.1.0",
  "imageio-ffmpeg>=0.5.0",
]

[project.optional-dependencies]
faster-whisper = [
  "faster-whisper>=1.1.0",
  "huggingface-hub>=0.24.0",
  "imageio-ffmpeg>=0.5.0",
]
mlx = [
  "mlx-whisper>=0.4.0",
  "huggingface-hub>=0.24.0",
]
all = [
  "faster-whisper>=1.1.0",
  "huggingface-hub>=0.24.0",
  "imageio-ffmpeg>=0.5.0",
  "mlx-whisper>=0.4.0",
]

[project.scripts]
video-to-notes = "ytlt.cli:main"
ytlt = "ytlt.cli:main"

[project.urls]
Homepage = "https://github.com/KIRVO-REPORTING/video-to-notes"
Documentation = "https://kirvo-reporting.github.io/video-to-notes/"
Repository = "https://github.com/KIRVO-REPORTING/video-to-notes.git"
Issues = "https://github.com/KIRVO-REPORTING/video-to-notes/issues"

[tool.setuptools.packages.find]
include = ["ytlt*"]
